[tool.poetry]
name = "mls-cloud-functions"
version = "0.1.0"
description = "ETL stuff for MLS Soccer API"
authors = ["Wes Aspinall <wra427@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
